[package]
name = "blaze-pk"
version = "0.8.0"
edition = "2021"
description = "Rust library for Blaze packet system"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/jacobtread/BlazePK-rs"
readme = "README.md"
keywords = ["EA", "serialization", "packet"]
categories = ["network-programming", "parser-implementations"]

[dependencies]
bytes = "1"
tokio = { version = "1", features = [
    "io-util",
], default-features = false, optional = true }
serde = { version = "1.0", optional = true }

[features]
# Default features enables BlazeSSL and serde
default = ["async", "serde"]
# Includes funcitons for syncronously reading and writing packets
sync = []
# Includes functions for reading and writing with Tokio TcpStreams
async = ["dep:tokio"]
# Type serialization with serde
serde = ["dep:serde"]
