[package]
name = "blaze-pk"
version = "0.9.0"
edition = "2021"
description = "Rust library for Blaze packet system"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/jacobtread/BlazePK-rs"
readme = "README.md"
keywords = ["EA", "serialization", "packet"]
categories = ["network-programming", "parser-implementations"]

[dependencies]
bytes = "1"
serde = { version = "1.0", optional = true }
tokio-util = { version = "0.7", features = ["codec"] }

[features]
# Default features enables BlazeSSL and serde
default = ["serde"]
# Type serialization with serde
serde = ["dep:serde"]
