[package]
name = "blaze-pk-derive"
version = "0.1.1"
description = "Derive macros for working with blaze-pk"

edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
darling = "0.20"
quote = "1"
syn = { version = "2", features = ["full"] }

[lib]
proc-macro = true
